# ros2cli

./: CODEOWNERS  README.md  network.py  pytest.ini
netperf_tool/: CMakeLists.txt  package.xml
netperf_tool/netperf_tool/: __init__.py
netperf_tool/src/: client_node.cpp  client_node.hpp  client_runner.cpp  client_runner.hpp  netperf_tool.cpp  node_runner.cpp  node_runner.hpp  server_node.cpp  server_node.hpp  server_runner.hpp  utils.cpp  utils.hpp
netperf_tool_interfaces/: CMakeLists.txt  package.xml
netperf_tool_interfaces/msg/: Bytes.msg
perf_tool/: CMakeLists.txt  package.xml
perf_tool/perf_tool/: __init__.py
perf_tool/src/: client_node.cpp  client_node.hpp  node_runner.cpp  node_runner.hpp  perf_tool.cpp  server_node.cpp  server_node.hpp  utils.cpp  utils.hpp
ros2action/: CHANGELOG.rst  package.xml  setup.py
ros2action/ros2action/api/: __init__.py
ros2action/ros2action/command/: action.py
ros2action/ros2action/verb/: __init__.py  find.py  info.py  list.py  send_goal.py  show.py  type.py
ros2action/test/: test_api.py  test_cli.py
ros2action/test/fixtures/: fibonacci_action_server.py
ros2cd/: package.xml  ros2cd.sh  setup.py
ros2cd/ros2cd/command/: cd.py
ros2cli/: CHANGELOG.rst  colcon.pkg  package.xml  setup.py
ros2cli/completion/: ros2-argcomplete.bash  ros2-argcomplete.fish  ros2-argcomplete.zsh
ros2cli/resource/: local_setup.fish  local_setup.zsh  package.dsv
ros2cli/ros2cli/: cli.py  entry_points.py  helpers.py  plugin_system.py
ros2cli/ros2cli/command/: __init__.py  daemon.py  extension_points.py  extensions.py
ros2cli/ros2cli/daemon/: __init__.py  daemonize.py
ros2cli/ros2cli/node/: __init__.py  daemon.py  direct.py  network_aware.py  qos.py  strategy.py
ros2cli/ros2cli/verb/: __init__.py
ros2cli/ros2cli/xmlrpc/: __init__.py  client.py  local_server.py
ros2cli/test/: test_daemon.py  test_direct.py  test_strategy.py
ros2cli_common_extension/: CMakeLists.txt  package.xml
ros2cli_test_interfaces/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros2cli_test_interfaces/action/: ShortVariedMultiNested.action
ros2cli_test_interfaces/msg/: ShortVaried.msg  ShortVariedNested.msg
ros2cli_test_interfaces/srv/: ShortVariedMultiNested.srv
ros2component/: CHANGELOG.rst  package.xml  setup.py
ros2component/ros2component/api/: __init__.py  component_searcher.py
ros2component/ros2component/command/: component.py
ros2component/ros2component/verb/: __init__.py  list.py  load.py  standalone.py  types.py  unload.py
ros2component/test/: test_api.py  test_cli.py  test_cli_list.py  test_cli_load.py  test_cli_types.py  test_cli_unload.py
ros2component_fixtures/: CMakeLists.txt  package.xml
ros2component_fixtures/include/ros2component_fixtures/: listener_component.hpp  talker_component.hpp  visibility_control.h
ros2component_fixtures/src/: listener_component.cpp  talker_component.cpp
ros2component_test_fixtures/: CMakeLists.txt  package.xml
ros2component_test_fixtures/include/ros2component_test_fixtures/: listener_component.hpp  talker_component.hpp  visibility_control.h
ros2component_test_fixtures/src/: listener_component.cpp  talker_component.cpp
ros2doctor/: CHANGELOG.rst  README.md  package.xml  setup.py
ros2doctor/ros2doctor/api/: __init__.py  format.py  network.py  package.py  platform.py  qos_compatibility.py  rmw.py  topic.py
ros2doctor/ros2doctor/command/: doctor.py  wtf.py
ros2doctor/ros2doctor/verb/: __init__.py  call.py  hello.py  platform.py
ros2doctor/test/: test_api.py  test_cli.py  test_flake8.py  test_hello.py  test_qos_compatibility.py  test_topic.py
ros2doctor/test/fixtures/: listener_node_with_reliable_qos.py  talker_node_with_best_effort_qos.py  talker_node_with_reliable_qos.py
ros2interface/: CHANGELOG.rst  package.xml  setup.py
ros2interface/ros2interface/api/: __init__.py
ros2interface/ros2interface/command/: interface.py
ros2interface/ros2interface/verb/: __init__.py  info.py  list.py  package.py  packages.py  proto.py  show.py
ros2interface/test/: test_api.py  test_cli.py  test_copyright.py  test_interface_text_line.py  test_text_line.py
ros2lifecycle/: CHANGELOG.rst  package.xml  setup.py
ros2lifecycle/ros2lifecycle/api/: __init__.py
ros2lifecycle/ros2lifecycle/command/: lifecycle.py
ros2lifecycle/ros2lifecycle/verb/: get.py  (+4 more)
ros2lifecycle/test/: test_cli.py
ros2lifecycle_test_fixtures/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros2lifecycle_test_fixtures/src/: simple_lifecycle_node.cpp
ros2multicast/: CHANGELOG.rst  README.rst  package.xml  setup.cfg  setup.py
ros2multicast/test/: test_api.py
ros2netperf/: package.xml  setup.py
ros2node/: CHANGELOG.rst  package.xml  setup.py
ros2node/test/: test_cli.py  test_cli_duplicate_node_names.py  test_flake8.py  test_node.py
ros2param/: CHANGELOG.rst  package.xml  setup.py
ros2param/test/: param_node.py  test_api.py  test_cli.py  test_cli_delete.py  test_cli_set.py  test_verb_dump.py  test_verb_list.py  test_verb_load.py  test_verb_set.py
ros2pkg/: CHANGELOG.rst  package.xml  setup.py
ros2pkg/test/: test_api.py  test_cli.py  test_copyright.py
ros2rosout/: README.md  package.xml  setup.py
ros2service/: CHANGELOG.rst  package.xml  setup.py
ros2service/test/: test_cli.py  test_echo.py
ros2srv/: package.xml  setup.py
ros2srv/test/: test_api.py  test_cli.py
ros2topic/: CHANGELOG.rst  package.xml  setup.py
ros2topic/test/: qos_subscription.py  test_cli.py  test_echo.py  test_echo_pub.py  test_info.py  test_primitives.py  test_pub.py  test_qos_conversions.py  test_use_sim_time.py
test_ros2cli/: CMakeLists.txt  package.xml
test_ros2cli/test/: cli_test_configuration.py  config_ros2action_test.py  config_ros2launch_test.py  config_ros2msg_test.py  config_ros2service_test.py  fixture_actions.py  ros2action_test_configuration.py  ros2interface_test_configuration.py  ros2msg_test_configuration.py  ros2node_test_configuration.py  ros2service_test_configuration.py  ros2srv_test_configuration.py  ros2topic_test_configuration.py  test_cli.py.in  test_config.py  test_process_output_customizable.py.in
(+175 files in other folders)
