<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ros2cd</name>
  <version>0.1.0</version>
  <description>
    The cd command for ROS 2 command line tools.
  </description>
  <maintainer email="vincent.rousseau@irstea.fr">Vincent Rousseaus</maintainer>
  <license>Apache License 2.0</license>

  <depend>ros2cli</depend>
  <depend>ros2pkg</depend>
  <depend>ament_tools</depend>

  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
