<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ros2cli</name>
  <version>0.34.0</version>
  <description>
    Framework for ROS 2 command line tools.
  </description>

  <maintainer email="audrow@openrobotics.org">Audrow Nash</maintainer>
  <maintainer email="geoff@openrobotics.org">Geoffrey Biggs</maintainer>

  <license>Apache License 2.0</license>

  <author email="aditya.pande@openrobotics.org">Aditya Pande</author>
  <author email="dthomas@osrfoundation.org">Dirk Thomas</author>
  <author email="mabel@openrobotics.org">Mabel Zhang</author>
  <author email="michael.jeronimo@openrobotics.org">Michael Jeronimo</author>

  <exec_depend>python3-argcomplete</exec_depend>
  <exec_depend>python3-importlib-metadata</exec_depend>
  <exec_depend>python3-packaging</exec_depend>
  <exec_depend>python3-pkg-resources</exec_depend>
  <exec_depend>python3-psutil</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-pytest-timeout</test_depend>
  <test_depend>test_msgs</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
