<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cli_meta</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2action</exec_depend>
  <exec_depend>ros2cli</exec_depend>
  <exec_depend>ros2component</exec_depend>
  <exec_depend>ros2doctor</exec_depend>
  <exec_depend>ros2interface</exec_depend>
  <exec_depend>ros2lifecycle</exec_depend>
  <exec_depend>ros2lifecycle_test_fixtures</exec_depend>
  <exec_depend>ros2multicast</exec_depend>
  <exec_depend>ros2node</exec_depend>
  <exec_depend>ros2param</exec_depend>
  <exec_depend>ros2pkg</exec_depend>
  <exec_depend>ros2run</exec_depend>
  <exec_depend>ros2service</exec_depend>
  <exec_depend>ros2topic</exec_depend>
  <exec_depend>sros2</exec_depend>
  <exec_depend>ros2launch</exec_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
