<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2doctor</name>
  <version>0.8.6</version>
  <description>A command line tool to check potential issues in a ROS 2 system</description>
  <maintainer email="clairewang@openrobotics.org">Claire Wang</maintainer>
  <license>Apache License 2.0</license>

  <depend>ros2cli</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-catkin-pkg-modules</exec_depend>
  <exec_depend>python3-ifcfg</exec_depend>
  <exec_depend>python3-rosdistro-modules</exec_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>std_msgs</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
