<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2doctor</name>
  <version>0.25.0</version>
  <description>A command line tool to check potential issues in a ROS 2 system</description>

  <maintainer email="audrow@openrobotics.org">Audrow Nash</maintainer>
  <maintainer email="geoff@openrobotics.org">Geoffrey Biggs</maintainer>

  <license>Apache License 2.0</license>

  <author email="aditya.pande@openrobotics.org">Aditya Pande</author>
  <author email="clairewang@openrobotics.org">Claire Wang</author>
  <author email="mabel@openrobotics.org">Mabel Zhang</author>
  <author email="michael.jeronimo@openrobotics.org">Michael Jeronimo</author>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-catkin-pkg-modules</exec_depend>
  <exec_depend>python3-psutil</exec_depend>
  <exec_depend>python3-importlib-metadata</exec_depend>
  <exec_depend>python3-rosdistro-modules</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2cli</exec_depend>
  <exec_depend>ros_environment</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-pytest-timeout</test_depend>
  <test_depend>std_msgs</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
