<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2interface</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>TODO: License declaration</license>


  <depend>ros2cli</depend>
  <depend>ros2action</depend>
  <depend>ros2msg</depend>
  <depend>ros2srv</depend>

  <exec_depend>ament_index_python</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>std_msgs</test_depend>
  <test_depend>std_srvs</test_depend>
  

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
