<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2interface</name>
  <version>0.8.6</version>
  <description>
    The interface command for ROS 2 command line tools
  </description>
  <maintainer email="jacob@osrfoundation.org">Jacob Perron</maintainer>
  <license>Apache License 2.0</license>

  <depend>ros2cli</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>rosidl_runtime_py</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>std_msgs</test_depend>
  <test_depend>std_srvs</test_depend>
  <test_depend>test_msgs</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
