<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ros2lifecycle</name>
  <version>0.11.0</version>
  <description>
    The lifecycle command for ROS 2 command line tools.
  </description>
  <maintainer email="clairewang@openrobotics.org">Claire Wang</maintainer>
  <maintainer email="mabel@openrobotics.org">Mabel Zhang</maintainer>
  <license>Apache License 2.0</license>

  <author email="dthomas@osrfoundation.org">Dirk Thomas</author>

  <depend>rclpy</depend>
  <depend>ros2cli</depend>

  <exec_depend>lifecycle_msgs</exec_depend>
  <exec_depend>ros2node</exec_depend>
  <exec_depend>ros2service</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ros_testing</test_depend>
  <test_depend>ros2lifecycle_test_fixtures</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
