[metadata]
name = ros2multicast
version = '0.6.1'
project_urls =
    GitHub = https://github.com/ros2/ros2cli/tree/master/ros2multicast
author = Dirk Thomas
author_email = dthomas@osrfoundation.org
maintainer = Dirk Thomas
maintainer_email = dthomas@osrfoundation.org
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
license = Apache License, Version 2.0
description = The multicast command for ROS 2 command line tools.
long_description = file: README.rst
keywords = ros2cli

[options]
install_requires =
  ros2cli
packages = find:
tests_require =
  pytest
  pytest-cov
zip_safe = true

[options.entry_points]
ros2cli.command =
    multicast = ros2multicast.command.multicast:MulticastCommand
ros2cli.extension_point =
    ros2multicast.verb = ros2multicast.verb:VerbExtension
ros2multicast.verb =
    receive = ros2multicast.verb.receive:ReceiveVerb
    send = ros2multicast.verb.send:SendVerb
